--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
     <body>
       <h1>Skyrim Perk Calculator</h1>
-      <a href="https://github.com/thehajo/PotD"><img style="position: absolute; top: 0; right: 0; border: 0;" alt="Fork me on GitHub"></a>
+      <a href="https://github.com/thehajo/VokriinatorBlack"><img style="position: absolute; top: 0; right: 0; border: 0;" alt="Fork me on GitHub"></a>
       <!--
       <div class="info">
         <b>New!</b> Now you can download respec scripts to respec your character to the perks you set with this tool. <a href="respec.html">Click here</a> for more information.
